tests/ui/codemap_tests/huge_multispan_highlight.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/huge_multispan_highlight.rs:93:18
   |
LL |       let _ = match true {
   |               ---------- `match` arms have incompatible types
LL |           true => (
   |  _________________-
LL | |
LL | |
LL | |
...  |
LL | |
LL | |         ),
   | |_________- this is found to be of type `()`
LL |           false => "
   |  __________________^
LL | |         
LL | |         
LL | |         
...  |
LL | |         
LL | |         ",
   | |_________^ expected `()`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
