tests/ui/codemap_tests/huge_multispan_highlight.rs
//@ compile-flags: --error-format=human --color=always
//@ ignore-windows
// Temporary until next release:
//@ ignore-stage2
fn main() {
    let _ = match true {
        true => (
            // last line shown in multispan header
























































































        ),
        false => "





















        ",
    };
    let _ = match true {
        true => (

        1 // last line shown in multispan header
























































































        ),
        false => "


        1 last line shown in multispan



















        ",
    };
}
